--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
         <div class="info">
             <div class="user">
-                <input type="text" placeholder="Enter your user name">
+                <input type="text" placeholder="Enter user name here">
             </div>
             <div class="password">
-                <input type="text" placeholder="Enter your password">
+                <input type="text" placeholder="Enter password here">
             </div>
             <div class="logIn">
                 <button class="log_button">
